# Windows-uchun

./: Cargo.toml  build.txt  build_err.txt  build_err2.txt  build_error.txt  cmd_error.json  error_clean.txt  errors.json  errs.txt  rust_errors.txt
.github/workflows/: rust.yml
ca/: root.crt  root.key
installer/: install.bat  uninstall.bat
src/: config.rs  detector.rs  filter.rs  gui.rs  logger.rs  main.rs  mitm.rs  proxy.rs  state.rs  updater.rs
