[package]
name = "ai-filter"
version = "1.2.0"
edition = "2021"
description = "AI filter — AI xizmatlarga yuboriladigan shaxsiy ma'lumotlarni filterlash"

[[bin]]
name = "ai-filter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
eframe = "0.29"
egui_plot = "0.29"
httparse = "1"
tray-icon = "0.19"
sysproxy = "0.2"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2.1"
webpki-roots = "0.26"
pki-types = { package = "rustls-pki-types", version = "1.7" }
winreg = "0.56.0"
self_update = { version = "0.41", default-features = false, features = ["rustls", "archive-zip", "compression-zip-deflate"] }

[profile.release]
opt-level = 3
lto = true
